src/routes/layout.css
@import 'tailwindcss';

@theme inline {
	--font-sans: 'Satoshi', sans-serif;
	--font-mono: 'SF Mono', monospace;
}

body {
	@apply bg-neutral-900 text-neutral-200;
}

.primary {
	@apply bg-neutral-200/25 px-6 py-2 text-neutral-200 ring-1 ring-neutral-600/50 transition-all duration-100 ease-in;

	@variant hover {
		@apply shadow-[0_0_24px] shadow-neutral-600;
	}

	@variant active {
		@apply scale-98 brightness-75;
	}
}

.secondary {
	@apply bg-neutral-800/25 px-6 py-2 ring-1 ring-neutral-600/50 backdrop-blur-xs transition-all duration-100 ease-in;

	@variant hover {
		@apply ring-2;
	}

	@variant active {
		@apply scale-98 brightness-75;
	}
}

